objects/ssot__EconomicPerformanceSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Country__c</fullName>
        <label>Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisclsReportingPeriodId__c</fullName>
        <label>Disclosure Reporting Period</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Economic Performance Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Market__c</fullName>
        <label>Market</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerformanceCategoryName__c</fullName>
        <label>Performance Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerformanceTypeName__c</fullName>
        <label>Performance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Region__c</fullName>
        <label>Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubsidiaryAccountId__c</fullName>
        <label>Subsidiary Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747382313694_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EconomicPerformanceSummary_DisclsRep_rel</label>
        <referenceTo>ssot__DisclosureReportingPeriod__dlm</referenceTo>
        <relationshipLabel>EconomicPerformanceSummary_DisclsRep_rel</relationshipLabel>
        <relationshipName>rel_1747382313694_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747382317753_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EconomicPerformanceSummary_Subsidiar_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>EconomicPerformanceSummary_Subsidiar_rel</relationshipLabel>
        <relationshipName>rel_1747382317753_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>